# curiosity_coach

./: .env.example  .gitignore  CLEANUP_REPORT.md  Ideas.md  PROJECT_CONTEXT.md  README.md  app.py  database.py  interaction_flow.md  kill_servers.sh  model.py  package-lock.json  pyproject.toml  requirements.txt  run_dev.sh  schema.sql  teacher-summary-notes.md  user_flow.dot
.ignore/lambda_function/: .env.example  create-iam-role.sh  deploy.sh  docker-compose.yml  lambda_function_local.py  pyproject.toml
Brain/: .gitignore  Dockerfile  README.md  README_SIMPLIFIED_MODE.md  requirements.txt  run.sh  setup.py
backend/: .env.example  .env.local  .gitignore  Dockerfile  README.md  app.py  database.py  dependencies.sh  queue_service.py  requirements.txt  run.sh  schema.sql
context_for_ai/: explanation.md  explanation.txt  feedback_feature.md  project-context.md  project_overview.md  user_persona_feature.md
curiosity-coach-frontend/: .env.example  CODE_IMPROVEMENTS.md  README.md  package-lock.json  package.json  tailwind.config.js
docs/: ABOUT_CONVERSATION_MEMORY.md  ABOUT_USER_PERSONA.md  Instructions_For_Dinesh.md  PLACEHOLDER_ANALYSIS.md
lambda_function/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-deploy.sh  lambda_function.py  mock_db.py  requirements.txt  run_local_test.sh  test_lambda_function.py  test_local.py  zip-deploy.sh
terraform/: .gitignore  .terraform.lock.hcl  README-cloudflare.md  STAGING_DEPLOYMENT_GUIDE.md  backend.tf  brain.tf  frontend.tf  get_latest_logs_cloudwatch.sh  main.tf  outputs.tf  parse_env.py  (+4 more)
(+228 files in other folders)
