[project]
name = "curiosity-coach"
version = "0.1.0"
description = "A chatbot application with Postgres backend"
requires-python = ">=3.8"
dependencies = [
    "gradio==4.13.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.23",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 