[project]
name = "curiosity-coach-lambda"
version = "0.1.0"
description = "Lambda function for Curiosity Coach that processes messages from SQS queue"
authors = [
    {name = "Curiosity Coach Team"}
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"

[tool.uv]
exclude = ["tests"] 